fixes routes
